--- a/out.html
+++ b/out.html
@@ -42,7 +42,7 @@
         <div class="qd-head">
             <div class="qd-left">
                 <div class="qd-name" id="xm">
-                    <script>document.write(getQueryVariable("name"))
+                    <script>document.write(getQueryVariable("name"))</script>
                 </div>
                 <div class="qd-number" id="xh">
                     <script>document.write(getQueryVariable("id"))</script>
