--- a/out.html
+++ b/out.html
@@ -60,7 +60,7 @@
                 <div class="line"><span>楼宇：</span><span id="skdd">学校<script>document.write(getQueryVariable("door"))</script>门进(限制2次)</span></div>
                 <div class="line"><span> 日期：
                     </span><span id="skrq">
-                        <script>document.write(new Date().getFullYear() + '-' + (new Date().getMonth() + 1) + '-' + new Date().getDate() + ' ' + new Date().getHours() + ':' + String(new Date().getMinutes()).padStart(2, '0'))</script>2020-10-15 10:35
+                        <script>document.write(new Date().getFullYear() + '-' + (new Date().getMonth() + 1) + '-' + new Date().getDate() + ' ' + new Date().getHours() + ':' + String(new Date().getMinutes()).padStart(2, '0'))</script>
                     </span></div>
             </div>
             <div style="display: flex;">
@@ -78,7 +78,7 @@
                 <div class="qd-lbbox" id="jrqd1">
                     <div id="jrqd">
                         <div class="ke-box lbke">
-                            <div class="qd-kename" style="font-weight: normal;;margin-top:5px;">上报时间：<script>document.write(new Date().getFullYear() + '-' + (new Date().getMonth() + 1) + '-' + new Date().getDate() + ' ' + new Date().getHours() + ':' + String(new Date().getMinutes()).padStart(2, '0'))</script>2020-10-15 10:35</div>
+                            <div class="qd-kename" style="font-weight: normal;;margin-top:5px;">上报时间：<script>document.write(new Date().getFullYear() + '-' + (new Date().getMonth() + 1) + '-' + new Date().getDate() + ' ' + new Date().getHours() + ':' + String(new Date().getMinutes()).padStart(2, '0'))</script></div>
                             <div class="qd-rkxx"><span id="jsxm">学校<script>document.write(getQueryVariable("door"))</script>门进(限制2次)</span>&nbsp;&nbsp;|&nbsp;&nbsp;<span id="skjc">进入</span></div>
                         </div>
                     </div>
